[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "banner88x31"
version = "1.0.4"
authors = [
  { name="rudy3333", email="mmax3163@gmail.com" },
]
description = "a small package to retrieve 88x31 banners"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rudy3333/banner88x31"
"Bug Tracker" = "https://github.com/rudy3333/banner88x31/issues"
